# snyk-docker-plugin

./: .bazelignore  .bazelrc  .commitlintrc.json  .eslintrc  .eslintrc.json  .gitignore  .gitleaksignore  .gitmodules  .npmignore  .prettierrc.json  .snyk  .travis.yml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Dockerfile.legacy  MODULE.bazel  Makefile.example  README.md  appveyor.yml  catalog-info.yaml  config.json  debug-local.js  debug-type.js  eslint.config.mjs  hello-aegis-sidecar.md  hello-world-sidecar-20260423-142236.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  raw.json  test-path-matching.js  text.json  tsconfig.json  tslint.json  update_centos_shas.sh
go/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  go.mod  go.sum
go/benchmarks/: BUILD.bazel  bench_test.go  equivalence_test.go  perf_compare_test.go
go/cmd/snyk-docker-plugin/: BUILD.bazel  main.go  main_test.go
go/internal/testutil/: BUILD.bazel  assert.go  fixtures.go
go/pkg/depgraph/: BUILD.bazel  depgraph.go  depgraph_test.go
go/pkg/deptree/: BUILD.bazel  tree.go  tree_test.go
go/pkg/display/: BUILD.bazel  display.go  display_test.go
go/pkg/dockerfile/: BUILD.bazel  parse.go  parse_test.go  types.go
go/pkg/extension/: BUILD.bazel  extension.go  extension_test.go  flags.go
go/pkg/extractor/: BUILD.bazel  extractor.go  extractor_test.go  layer.go  types.go
go/pkg/gobinary/: BUILD.bazel  gobinary.go  gobinary_test.go
go/pkg/image/: BUILD.bazel  type.go  type_test.go
go/pkg/parser/: BUILD.bazel  parser.go  parser_test.go
go/pkg/pythonparser/: BUILD.bazel  parser_test.go  requirements.go
go/pkg/registry/: BUILD.bazel  inspector.go  inspector_test.go
go/pkg/response/: BUILD.bazel  builder.go  builder_test.go
go/pkg/scan/: BUILD.bazel  scan.go  scan_test.go
go/pkg/types/: BUILD.bazel  depgraph.go  options.go  options_test.go  pluginresponse.go  testresult.go
lib/: BUILD.bazel  base-image-lifecycle.ts  buffer-utils.ts  compression-utils.ts  depGraphFromLib.json  depGraphFromTree.json  depTree.json  depTreeNoVisited.json  display.ts  docker-file.ts  docker.ts  errors.ts  experimental.ts  facts.ts  fetch-snyk-docker-analyzer.js  image-reference.ts  image-save-path.ts  image-support.ts  image-transport.ts  image-type.ts  index.js  index.ts  instruction-parser.ts  ls-utils.ts  mappedDeps.json  option-utils.ts  response-builder.ts  scan-payload-metrics.ts  scan.ts  static.ts  stream-utils.ts  sub-process.js  sub-process.ts  types.ts  utils.ts  version.ts  virtualMappedDeps.json
lib/analyzer/: apk-analyzer.ts  apt-analyzer.ts  binaries-analyzer.ts  docker-analyzer.ts  hash-analyzer.ts  host-analyzer.ts  image-extractor.ts  image-id-detector.ts  image-inspector.ts  index.ts  layer-attribution.ts  machine-analyzer.ts  os-release-detector.ts  rpm-analyzer.ts  static-analyzer.ts  types.d.ts  types.ts
lib/analyzer/applications/: common.ts  dotnet.ts  evidence-paths.ts  index.ts  jar-worker.ts  java.ts  node-modules-utils.ts  node.ts  php.ts  python.ts  runtime-common.ts  scanners.ts  types.ts  worker-utils.ts
lib/analyzer/base-runtimes/: index.ts  parser.ts
lib/dependency-graph/: index.ts
lib/dependency-tree/: index.ts
lib/dockerfile/: index.ts  instruction-parser.ts  instruction-updater.ts  types.ts
lib/extractor/: callbacks.ts  decompress-maybe.ts  generic-archive-extractor.ts  image.ts  index.ts  layer.ts  oci-distribution-metadata.ts  provenance-parser.ts  types.ts  whiteout.ts
lib/go-parser/: go-binary.ts  go-module.ts  index.ts  pclntab.ts  types.ts  version-parser.ts
lib/inputs/: index.ts
lib/parser/: index.ts
lib/python-parser/: common.ts  metadata-parser.ts  provides-extra.ts  requirements-parser.ts  types.ts
lib/vex/: index.ts  loader.ts  parser.ts
test/: BUILD.bazel  README.md  inspect.test.js  jest-snapshot-strip-analytics.cjs  manual.js  system.test.js
test/fixtures/: centos-shas.ts
test/go-binary-regression/: Dockerfile  go.mod  go.sum  main.go
test/harness/: run.ts
test/lib/: base-image-lifecycle-status.spec.ts  base-image-lifecycle.spec.ts  buffer-utils.spec.ts  display.spec.ts  display.test.ts  docker-file.test.ts  docker.spec.ts  docker.test.ts  dockerfile.spec.ts  dockerfile.test.ts  experimental.test.ts  facts.spec.ts  image-reference.spec.ts  image-save-path.spec.ts  image-save-path.test.ts  image-support.spec.ts  image-type.spec.ts  image-type.test.ts  index.test.ts  instruction-parser.test.ts  instructions-parser.spec.ts  ls-utils.test.ts  response-builder.spec.ts  response-builder.test.ts  scan-payload-metrics.spec.ts  scan.spec.ts  static.spec.ts  stream-utils.spec.ts  stream-utils.test.ts  sub-process.spec.ts  utils.spec.ts  vex.spec.ts
test/matchers/: dockerPackageInstallCommand.ts  setup.ts
test/system/: application-scans.test.ts  deleted-files.spec.ts  docker.spec.ts  experimental.test.ts  image-inspector.spec.ts  index.spec.ts  layer-attribution.spec.ts  plugin-option.spec.ts  plugin.spec.ts  plugin.test.ts  rpm.test.ts  static.spec.ts  static.test.ts  system.test.ts
test/unit/: apk-file-list.spec.ts  apk-ownership.spec.ts  base-image-lifecycle.spec.ts  base-runtimes-parser.spec.ts  dockerPackageInstallCommand.spec.ts  error-utils.spec.ts  evidence-paths.spec.ts  extension-detection.spec.ts  go-binaries-large-file.spec.ts  go-binaries.spec.ts  go-binary-information-parser.spec.ts  go-parser-memory-stream.spec.ts  go-version-parser.spec.ts  java-runtime-parser.spec.ts  node-alias-conversion.spec.ts  option-utils.spec.ts  options-utils.spec.ts  path-canonicalization.spec.ts  pclntab.spec.ts  python-common.spec.ts  python-metadata-parser.spec.ts  python-parse-dependency.spec.ts  python-provides-extras.spec.ts  python-requirements-parser.spec.ts  response-builder-ownership.spec.ts
test/util/: index.ts
test/windows/: application-scans.spec.ts  application-scans.test.ts  archive-scan.spec.ts  experimental.spec.ts  experimental.test.ts  go-binary-debug.spec.ts  identifier-fallback.spec.ts  jest.config.js  jest.docker.config.js  plugin.spec.ts  registry-scan.spec.ts  static.spec.ts  static.test.ts
(+504 files in other folders)
