"""Bazel module for the snyk-docker-plugin Go implementation."""

module(
    name = "snyk_docker_plugin_go",
    version = "0.0.1",
)

# rules_go — Go toolchain + build rules
bazel_dep(name = "rules_go", version = "0.59.0")

# gazelle — BUILD file generator and dependency management
bazel_dep(name = "gazelle", version = "0.40.0")

# -----------------------------------------------------------------------
# Go SDK
# -----------------------------------------------------------------------
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

# -----------------------------------------------------------------------
# Go dependencies (from go.mod / go.sum)
# -----------------------------------------------------------------------
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Declare each module that is imported directly or transitively.
# run `bazel run //:gazelle -- update-repos -from_file=go.mod` to refresh.
use_repo(
    go_deps,
    "com_github_fatih_color",
    "com_github_google_go_containerregistry",
    "com_github_klauspost_compress",
    "com_github_knqyf263_go_rpmdb",
    "com_github_opencontainers_image_spec",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
)
