load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "display",
    srcs = ["display.go"],
    importpath = "github.com/snyk/snyk-docker-plugin/pkg/display",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/depgraph",
        "//pkg/types",
        "@com_github_fatih_color//:color",
    ],
)

go_test(
    name = "display_test",
    srcs = ["display_test.go"],
    embed = [":display"],
    deps = [
        "//pkg/types",
        "@com_github_fatih_color//:color",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
