load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gobinary",
    srcs = ["gobinary.go"],
    importpath = "github.com/snyk/snyk-docker-plugin/pkg/gobinary",
    visibility = ["//visibility:public"],
)

go_test(
    name = "gobinary_test",
    srcs = ["gobinary_test.go"],
    embed = [":gobinary"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
