load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gobinary",
    srcs = ["gobinary.go"],
    importpath = "github.com/snyk/snyk-docker-plugin/pkg/gobinary",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/depgraph",
        "//pkg/types",
    ],
)

go_test(
    name = "gobinary_test",
    srcs = ["gobinary_test.go"],
    embed = [":gobinary"],
    deps = [
        "//pkg/types",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
