load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pythonparser",
    srcs = ["requirements.go"],
    importpath = "github.com/snyk/snyk-docker-plugin/pkg/pythonparser",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pythonparser_test",
    srcs = ["parser_test.go"],
    embed = [":pythonparser"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
