load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "registry",
    srcs = ["inspector.go"],
    importpath = "github.com/snyk/snyk-docker-plugin/pkg/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types",
        "@com_github_google_go_containerregistry//pkg/authn",
        "@com_github_google_go_containerregistry//pkg/crane",
        "@com_github_google_go_containerregistry//pkg/name",
        "@com_github_google_go_containerregistry//pkg/v1:pkg",
        "@com_github_google_go_containerregistry//pkg/v1/remote:remote",
    ],
)

go_test(
    name = "registry_test",
    srcs = ["inspector_test.go"],
    embed = [":registry"],
    deps = ["@com_github_stretchr_testify//assert"],
)
